# termpose

./: .gitignore  Parser.hx  README.md  Termpose.hx  Termpose.scala  Termposen.hx  basic C++ api.md  basicCppExample.cpp  benchCTermpose.cpp  build.sbt  coffeeTermpose.js  cppdemo.cpp  cppintro.md  inlist.md  longterm.term  makefile  makoSensibleTypes.cpp  memorial_history  nakedlist.md  nakedlist_spec.md  nakedlist_tests.nil  out.js  perftest.cpp  spec.md  termpose.c  termpose.coffee  termpose.cpp  termpose.h  termpose.js  termpose.sublime-project  test.scala  testCPPTermpose.cpp  testCTermpose.c  tests.term  woodslist.md  woodslist_spec.md  woodspace.txt
dart/: CHANGELOG.md  flake.nix  pubspec.yaml  readme.md  woodslist.dart
dart/examples/: canonical_examples.dart  readme_example.dart
dart/lib/: woodslist.dart
dart/test/: canonical_examples.dart  readme_example.dart
oldrust/termpose/: Cargo.toml
rust/: .gitignore  Cargo.toml  README.md  What is wood in relation to lisp.md  What is wood in relation to lisp?.md  benchmark results 2018-08-04.txt  big curvy.sli  build.rs  longterm.term  rusttermpose.sublime-project  sexp tests.sexp  shortterm.term  shortwood.sexp  tests.term
rust/benches/: woodslist.rs
rust/examples/: from_file.rs  read_file_write_file.rs  readme_1.rs  readme_2.rs  readme_3.rs  simple.rs
rust/src/: lib.rs  makefile  parsers.rs  termpose.c  termpose.h  translators.rs  wooder.rs
rust/src/parsers/: mod.rs  ref_stack.rs  sexp_parser.rs  termpose_parser.rs  wooddent_parser.rs  woodslist_parser.rs
rust/termpose/src/: lib.rs
rust/termpose_derive/: Cargo.toml
rust/termpose_derive/src/: lib.rs
rust/wood_derive/: Cargo.toml
rust/wood_derive/examples/: derive.rs  wooder.rs
rust/wood_derive/src/: lib.rs
try_termpose_derive/: Cargo.toml
try_termpose_derive/src/: main.rs
(+3 files in other folders)
