[package]
name = "wood"
description = "A robust material that is simple to work: Parsing, serialization and deserialization for termpose and woodslist"
version = "0.5.3"
authors = ["mako <marcus.yass@gmail.com>"]
repository = "https://github.com/makoConstruct/termpose/blob/master/rust/README.md"
license = "MIT"
edition = "2021"
keywords = ["s-expression", "serialization"]


[dependencies]
smallvec = "1.8.0"