[package]
name = "wood_derive"
version = "0.4.0"
authors = ["mako <marcus.yass@gmail.com>"]
edition = "2018"
description = "autoderive for wood serialization"
repository = "https://github.com/makoConstruct/termpose/tree/master/rust/wood_derive"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.15.33"
quote = "0.6.12"
proc-macro2 = "0.4.29"
wood = "0.4.0"